<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_add_location_black_24dp"
            android:title="@string/menu_pharmacies" />
    </group>

    <item android:title="Прочее">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_aboutApp" />
        </menu>
    </item>

</menu>
